# music-plugins

./: CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
mix3Dplugin/: .gitignore  CMakeCache.txt  CMakeLists.txt
mix3Dplugin/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
mix3Dplugin/JUCE/tools/modules/: Makefile  cmake_install.cmake
mix3Dplugin/Source/: PluginProcessor.cpp
mix3Dplugin/doc/: Fundamentals_of_3D_audio_spatialization.md  Teoria_sonido_3D_e_implementacion.md
mix3Dplugin/src/: PluginEditor.cpp  PluginProcessor.cpp
